# tomodachi

./: .gitignore  Cargo.toml  README.md  build_installer.ps1  install.ps1  install.sh
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: creature.rs  ipc.rs  main.rs  renderer.rs  sprite.rs  state.rs  tray.rs  watcher.rs
crates/installer/: Cargo.toml
crates/installer/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
shell/: tomodachi.cmd  tomodachi.ps1  tomodachi.zsh
