[package]
name = "tomodachi-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tomodachi-client"
path = "src/main.rs"

[dependencies]
tomodachi-shared = { path = "../shared" }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dependencies.windows-sys]
version = "0.59"
features = ["Win32_Foundation"]
