[package]
name = "tomodachi-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tomodachi-daemon"
path = "src/main.rs"

[dependencies]
tomodachi-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Git
git2 = "0.19"

# Filesystem watching
notify = "7"

# Platform directories
directories = "5"

# Window / rendering
winit = "0.30"
softbuffer = "0.4"

# System tray
tray-icon = "0.19"

# For Windows-specific APIs
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
] }
